# WinXSearch_Rust

./: Cargo.toml
src/: filetype_searches.rs  functions.rs  helper_functions.rs  main.rs
