[package]
name = "WinXSearch"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "*"
walkdir = "*"
winapi = { version = "0.3", features = ["winerror","shlobj", "combaseapi", "shellapi", "objbase"] }
lazy_static = "1.4"
lopdf = "0.26.0"
pdf-extract = "*"
encoding_rs = "0.8"
anyhow = "1.0"
crossterm = "*"
clearscreen = "*"
windows = { version = "*", features = ["Win32_Foundation","Win32_UI_Shell_Common", "Win32_UI_Shell", "Win32_System_Iis", "ApplicationModel_Core"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
